# pydrifter

./: .gitignore  README.md  STATISTICS.md  monitoring_config.yaml  pyproject.toml  tt.yaml
pydrifter/: __init__.py  logger.py  preprocessing.py  statistics.py
pydrifter/base_classes/: base_statistics.py
pydrifter/calculations/: stat.py
pydrifter/calculations/stat_tests/: kl_divergence.py  kstest.py  mannwhitney.py  psi.py  ttest.py  wasserstein.py
pydrifter/config/: table_data.py
pydrifter/connections/: __init__.py  dataloader.py  s3.py
pydrifter/module/: income.py
