[tool.poetry]
name = "pydrifter"
version = "0.1.2"
description = "Data drift checking for ML projects"
authors = ["aesedeu <aesedeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scipy = "^1.15.2"
numpy = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
